--- a/index.html
+++ b/index.html
@@ -16,13 +16,24 @@
     
   </p>
 
-<div class="photo">
 
   <img src="pic.jpg">
+
+  <div class="hello">
+    HELLO,
+  </div>
+
+<div class="abit">
+  a bit about me:
 </div>
-
-
-
-
+<ul>
+  <li>Real-Name = Sarith Vimukthi<br></li>
+<li>Level != studying <br></li>
+<li>D-O-B = 25th April <br></li>
+<li>Home Town = Anuradhapura <br></li>
+<li>Living = Matale <br></li>
+<li>Country = Sri lanka <br></li>
+<li>State = developer</ul></li>
+</ul>
 </body>
 </html>
